#56 Correction des warnings